[homepage our_sites] fix text alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -991,6 +991,7 @@ h4 {
         padding: 0 20px;
       }
       p {
+        width: 100%;
         font-size: 16px;
         line-height: 1.2;
       }
